# armake

./: .hgignore  CMakeLists.txt  Makefile  README.md
completions/: _armake  armake
src/: binarize.c  binarize.h  build.c  build.h  derapify.c  docopt.c  docopt.h  filesystem.c  filesystem.h  img2paa.c  keygen.c  main.c  material.c  matrix.c  model_config.c  model_config.h  p3d.c  p3d.h  paa2img.c  preprocess.c  preprocess.h  rapify.c  rapify.h  rapify.l  rapify.y  sign.c  unistdwrapper.h  unpack.c  utils.c  utils.h  vector.c  version.h  wrp.c  wrp.h
